# LINAL1

./: CMakeLists.txt  main.cpp
matrix/: matrix.cpp  matrix.h
methods/: gauss.cpp  gauss.h  lu.cpp  lu.h
utilits/: utilits.cpp  utilits.h
